# brainplorp

./: .gitignore  CHANGELOG_DRAFT_v1.7.1.md  CLAUDE.md  LICENSE  MANUAL_TEST_CURRENT.md  README.md  RENAME_TO_BRAINPLORP.md  pyproject.toml
.claude/commands/: close-session.md  lead-eng-close-session.md  overdue.md  tasks.md  today.md  update-handoff.md  urgent.md  work-tasks.md
.github/workflows/: release.yml  test.yml
Docs/: ARCHITECTURE.md  DOCTOR_COMMAND_IMPROVEMENTS.md  EXAMPLE_WORKFLOWS.md  INSTALLATION_TROUBLESHOOTING.md  KNOWN_ISSUES.md  MANUAL_TEST_MCP_USER_JOURNEY.md  MANUAL_TEST_SPRINT7_PROCESS.md  MCP_ARCHITECTURE_GUIDE.md  MCP_SETUP.md  MCP_USER_MANUAL.md  MCP_WORKFLOWS.md  MIGRATION_GUIDE.md  MULTI_COMPUTER_SETUP.md  OBSIDIAN_REST_API_ANALYSIS.md  PM_HANDOFF.md  PM_HANDOFF_ARCHIVE.md  QUICK_ADD_FRONTENDS.md  RELEASE_PROCESS.md  SPRINT_8_VAULT_VERIFICATION.md  TASKWARRIOR_VS_OBSIDIAN_ASSESSMENT.md  TESTER_GUIDE.md  VAULT_SETUP.md  VAULT_SYNC_ARCHITECTURE.md  VAULT_SYNC_ARCHITECTURE_DECISION.md  VAULT_SYNC_DEVELOPER_GUIDE.md  VAULT_SYNC_SECURITY_SPEC.md  VAULT_SYNC_USER_GUIDE.md  plorp_ARCHITECTURE.md  plorp_IMPLEMENTATION_PLAN.md  plorp_PRIOR_VERSION_NOTES.md  plorp_SPEC.md  plorp_TASKWARRIOR_INTEGRATION.md
Docs/manual test journeys/: MANUAL_TEST_MCP_USER_JOURNEY.md  MANUAL_TEST_SPRINT7_PROCESS.md  MANUAL_TEST_SPRINT_8_MCP.md  MANUAL_TEST_SPRINT_8_USER_JOURNEY.md  MANUAL_TEST_USER_JOURNEY.md
Docs/sprints/: SPRINT_0_SPEC.md  SPRINT_10.1.1_INSTALLATION_HARDENING_SPEC.md  SPRINT_10.1_BUGS.md  SPRINT_10.1_WHEEL_DISTRIBUTION_SPEC.md  SPRINT_10.2_SYNC_SERVER_SPEC.md  SPRINT_10.3_CRITICAL_KNOWLEDGE.md  SPRINT_10.3_VAULT_SYNC_SPEC.md  SPRINT_10_APPENDIX.md  SPRINT_10_SPEC.md  SPRINT_1_SPEC.md  SPRINT_2_SPEC.md  SPRINT_3_SPEC.md  SPRINT_4_SPEC.md  SPRINT_5_COMPLETION.md  SPRINT_5_QA_REVIEW.md  SPRINT_5_QA_SUMMARY.md  SPRINT_5_SPEC.md  SPRINT_6_SPEC.md  SPRINT_7_SPEC.md  SPRINT_8.5_CLEANUP_SPEC.md  SPRINT_8.6_INTERACTIVE_PROJECTS_SPEC.md  SPRINT_8_SPEC.md  SPRINT_9.1_FAST_TASK_QUERIES_SPEC.md  SPRINT_9.1_MANUAL_TESTING.md  SPRINT_9.2_EMAIL_INBOX_CAPTURE_SPEC.md  SPRINT_9.2_MANUAL_TESTING.md  SPRINT_9.3_MANUAL_TESTING.md  SPRINT_9.3_QUICK_ADD_SPEC.md  SPRINT_9.3_QUICK_ADD_SPEC.md.backup  SPRINT_9_MANUAL_TESTING.md  SPRINT_9_SPEC.md  SPRINT_BREAKDOWN.md
deploy/: Dockerfile  couchdb-config.ini  couchdb-fly.toml  couchdb.Dockerfile  fly.toml
prompts/: LEAD-ENGINEER-PROMPT.md  LEAD_ENGINEER_INSTANCE_INSTRUCTIONS.md  NEW_INSTANCE_INSTRUCTIONS.md  PLORP-PM-ARCHITECT.md  PM_INSTANCE_INSTRUCTIONS.md  PM_protoprompt.md  lead_eng_protoprompt.md  protoprompt.txt
prompts/archive/: NEW_INSTANCE_INSTRUCTIONS.md
raycast/: quick-add-inbox.sh
scripts/: TASKWARRIOR_TESTING.md  TESTING_SCRIPTS_README.md  clean_test_environment.sh  email_to_inbox.py  install.sh  reconcile_taskwarrior.py  restore_test_environment.sh  test_taskwarrior_version.sh
src/brainplorp/: __init__.py  __main__.py  cli.py  config.py
src/plorp/: __init__.py  __main__.py  cli.py  config.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_tasks.py  test_config.py  test_smoke.py  test_vault_client.py
tests/fixtures/: sample_daily_note.md  sample_inbox.md  taskwarrior_export.json
tests/test_commands/: test_setup.py
tests/test_core/: __init__.py  test_daily.py  test_exceptions.py  test_inbox.py  test_note_operations.py  test_notes.py  test_process.py  test_projects.py  test_review.py  test_tasks.py  test_types.py
tests/test_mcp/: __init__.py  (+1 more)
(+84 files in other folders)
