[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brainplorp"
version = "1.7.0"
description = "Workflow automation for TaskWarrior + Obsidian"
authors = [{name = "brainplorp contributors"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "mcp>=0.1.0",
    "html2text>=2020.1.16",
    "keyring>=24.0",
    "requests>=2.31.0",
]

[project.scripts]
brainplorp = "brainplorp.cli:cli"
brainplorp-mcp = "brainplorp.mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "mypy>=1.0",
    "responses>=0.23.0",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "integration: marks tests as integration tests (may require external tools)",
]

[tool.setuptools.package-data]
brainplorp = ["slash_commands/*.md"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Relaxed for initial development
